simple/test/features/errors/parser/e0013_invalid_range_pattern.spl
# E0013: Invalid Range Pattern

Feature: E0013 - Invalid Range Pattern
  As a Simple compiler
  I want to detect invalid range patterns in match expressions
  So that users write correct pattern matching code

  Background:
    Given I have the Simple compiler
    And the compiler supports pattern matching with ranges

  Scenario: Invalid range with wrong order
    When I compile:
      '''
      fn classify(n: i32) -> str:
        match n:
          10..0: "invalid"  # Error: start > end
          _: "valid"
      '''
    Then I should see error E0013 at line 3
    And the error message should contain "invalid range"
    And the error should suggest "range start must be less than or equal to end"

  Scenario: Invalid range with incompatible types
    When I compile:
      '''
      fn check(x: str) -> bool:
        match x:
          0..10: true  # Error: ranges only work with numeric types
          _: false
      '''
    Then I should see error E0013 at line 3
    And the error message should contain "invalid range in pattern"
    And the error should note "ranges require numeric types, found str"

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      match n:
        5..-1: "bad"
        _: "good"
      '''
    Then I should see error E0013
    And the error message should contain "잘못된 범위"

  Scenario: Valid range patterns compile successfully
    When I compile:
      '''
      fn classify(n: i32) -> str:
        match n:
          0..10: "low"
          10..20: "medium"
          20..=100: "high"
          _: "other"
      '''
    Then compilation should succeed
    And no errors should be reported
